# OtterPlus_StepperBaustein

./: .gitignore  CNAME  NOTICE  StepperBaustein.kicad_prl  StepperBaustein.kicad_pro  StepperBaustein.kicad_sch  fp-info-cache
.github/workflows/: build-and-deploy.yml
deploy/: NOTICE  index.html
firmware/: .gitignore  CMakeLists.txt  sdkconfig
firmware/main/: CMakeLists.txt  display.cpp  display.h  gpio_inputs.cpp  gpio_inputs.h  idf_component.yml  main.cpp  serial_config.cpp  serial_config.h  settings.cpp  settings.h  stepper.cpp  stepper.h
flash/dev/: index.html  manifest.json
flash/v1.0.0/: manifest.json
hardware/: StepperBaustein.kicad_pcb  StepperBaustein.kicad_pro
web/: manifest.json
